--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Dogs - Rede social para cachorros." />
-    <title>Dogs</title>
+    <meta name="description" content="Gerador de currículo" />
+    <title>Gerador de currículo</title>
   </head>
 
   <body>
     <div id="root"></div>
+    
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
